--- a/view.css
+++ b/view.css
@@ -1,8 +1,42 @@
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+#questions {
+  float: left;
+  width: 25%;
+  padding: 50px 40px;
+}
+#container {
+  height: 400px;
+  float: right;
+  width: 75%;
+}
+#frontview {
+
+}
+
+body {
+  font-family: sans-serif;
+}
+
+input {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  border: 1px solid #999;
+  font-size: 12px;
+  padding: 5px;
+}
+
 label {
   font-size: 16px;
+  margin-bottom: 5px;
+  display: block;
 }
 button {
-  padding: 3px 3px
+  padding: 7px 7px;
+  margin-bottom: 10px;
 }
 tr:nth-child(even) {
   background-color: #f2f2f2
@@ -15,4 +49,9 @@ th {
 }
 tr {
     text-align: right
+}
+.panel {
+  padding: 9px;
+  background-color: #f2ebeb;
+  font-size: 12px;
 }
